# grokking-collapse-exploration

./: .gitignore  ANALYSIS.md  METHODOLOGY.md  README.md  pyproject.toml
conf/: config.yaml
results/test_cond/: results.json
scripts/: run_experiment.sh  setup.sh  visualize.py
src/: __init__.py  analysis.py  config.py  data.py  data_attribution.py  explorer.py  mechanistic_analysis.py  metrics.py  model.py  phase_diagram.py  progress_measures.py  train.py
src/dashboard/: app.py
tests/: test_analysis.py  test_data.py  test_explorer.py  test_metrics.py  test_model.py  test_reproducibility.py  test_train.py
