[project]
name = "grokking-collapse"
version = "0.1.0"
description = "Experimental study of grokking under distributional collapse"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
